# purestg2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  index.html  params.json
include/: pureproto.h
pppd/: Makefile  Makefile.am  Makefile.in  pureclient.c  pureclient.h  purestg2.c
stargazer/: Makefile  Makefile.am  Makefile.in  purestg2.cpp  purestg2.h
